updated file schema and deleting folders and files

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 MICROSERVICE_PORT=3005
 
 MONGO_CONNECTION_PATH="mongodb://admin:admin@localhost:27017/members-auth?authSource=members-auth&readPreference=primary"
+AWS_REGION="eu-central-1"
+AWS_ACCESS_KEY_ID="AKIAXUCM6V2CVH3QFCX2a"
+AWS_ACCESS_SECRET_KEY="SaxmMrSrGvTlsOK4IFGYs1jbgiRt5nH9lVgh4z+Va"
+AWS_S3_BUCKET="members-files-test"
